alteração index, validação, login

--- a/resposta/login.html
+++ b/resposta/login.html
@@ -52,7 +52,7 @@
                 Copyright © 2022 Todos os Direitos Reservados.
             </span>          
         </div>
-        <script src="./js/validar.js"></script>
+        <script src="../resposta/js/validar.js"></script>
     </body>
 </html>
 
