--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
         <title>Intranet - Login</title>
     </head>
 
+
     <body>
         <h1>.</h1>
         <div id="login">
@@ -21,10 +22,11 @@
 
                 <div id="username" class="card-content">
                     <div class="card-content-area">
-                        <label for="username">Usuário: </label>
+                        <label for="username">Colaborador: </label>
                         <!--<input type="text" id="username" autocomplete="off">-->
                         <input id="txtUsuario" runat="server" type="text" class="form-control" name="username"  required="" autocomplete="off"/>                                                                                               <!--placeholder="Usuário"-->
                     </div>
+
 
                     <div id="password" class="card-content-area">
                         <label for="password">Senha: </label>
@@ -32,6 +34,7 @@
                         <input id="txtSenha" runat="server" type="password" class="form-control" name="password"  required="" />                                                                                                  <!--placeholder="Senha"-->
                     </div>
                 </div>
+
 
                 <div class="card-footer">
                     <!--<input type="submit" value="login" class="submit">-->
@@ -44,12 +47,12 @@
             </form>           
         </div>
 
-        <div id="testebaixo" style="font-family:Arial, Helvetica, sans-serif;" style="margin: 0 auto;">          
+        <div id="testebaixo" style="font-family:Arial, Helvetica, sans-serif;">          
             <span class="bold">
                 Copyright © 2022 Todos os Direitos Reservados.
             </span>          
         </div>
-        <script src="./js/validar.js"></script>
+        <script src="./login.html"></script>
     </body>
 </html>
 
