--- a/resposta/login.html
+++ b/resposta/login.html
@@ -46,11 +46,11 @@
             </form>           
         </div>
 
-        <div id="testebaixo" style="font-family:Arial, Helvetica, sans-serif;">          
+        <!--<div id="testebaixo" style="font-family:Arial, Helvetica, sans-serif;">          
             <span class="bold">
                 Copyright © 2022 Todos os Direitos Reservados.
             </span>          
-        </div>
+        </div>-->
         <script src="../resposta/js/validar.js"></script>
     </body>
 </html>
