--- a/resposta/login.html
+++ b/resposta/login.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport"content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/temas.css">        
-        <link rel="shortcut icon" href="./imagens/favicon.png" />
+        <link rel="shortcut icon" href="./css/favicon.png" />
         <title>Intranet - Login</title>
     </head>
     
